--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,9 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&family=Lobster&family=Patua+One&family=Philosopher:ital,wght@0,400;0,700;1,400;1,700&display=swap"
     rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300..700&family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap"
+    rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap"
     rel="stylesheet">
   <!--
